Correct alignment for gallery pictures

--- a/pages/styles/sheet-picture.less
+++ b/pages/styles/sheet-picture.less
@@ -30,6 +30,11 @@
         height: 100;
         text-align: center;
         vertical-align: middle;
+
+        .pic-glass, IMG {
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     .body {
